trying to solve add order